[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-log-analyzer"
version = "0.1.0"
description = "A lightweight open-source prototype for cybersecurity log analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Open Source Prototype Team"}
]
keywords = ["cybersecurity", "log-analysis", "cli", "security", "soc"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
cyber-log-analyzer = "security_log_analyzer.cli:main"

[tool.setuptools.packages.find]
include = ["security_log_analyzer*"]
